--- a/Contact.html
+++ b/Contact.html
@@ -70,6 +70,6 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, qui consequuntur a
 
 
 <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+<script src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXrCOnrqEYJkc4eXrd-7DPVc3yP1Ko2wir-g&usqp=CAU" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
